# groth-validator

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.local  groth.cabal  hie.yaml
compiled/: test00.plutus  test00Neg.plutus  test00_datum.json
compiled/profile/: BLS6_6_V1.ZKPVerification.uplc-0.flat  BLS6_6_V1.ZKPVerification.uplc-1.flat  applied.flat  commands.txt  datum-3fp.flat  script-context.flat  script.flat  sum.textual  unit.flat
compiled/profile/BLS/: blsPairing.flat  blsPairingV1.flat
compiled/profile/V1/: inversePV1.flat
compiled/profile/V2/: inversePV2.flat
compiled/profile/V3/: inversePV3.flat  sumOfPolysV3.flat
exe/: Main.hs
scripts/: deploy.sh  unlock.sh
snarkjs/test00/: proof.json  public.json  verification.json
snarkjs/test01/: proof.json  public.inst.json  vk.json
snarkjs/test02/: proof.json  public.inst.json
snarkjs/test03/: proof.json  public.inst.json
src/: Auxiliary.hs  Deploy.hs  PlutusUtils.hs
src/Algebra/V1/: Integers.hs  Polynomials.hs  Test.hs  Types.hs
src/Algebra/V2/: Integers.hs  Polynomials.hs  Test.hs  Types.hs
src/Algebra/V3/: Integers.hs  Polynomials.hs  Test.hs  Types.hs
src/BLS12_381_V1/: Pairing_bls12381 copy.hs  Pairing_bls12381.hs
src/BLS12_381_V2/: Pairing_bls12381.hs
src/BLS6_6/: Params.hs  Test.hs  ZKPVerification.hs
src/BLS6_6_V1/: Params.hs  Test.hs  ZKPVerification.With.Trace.hs.backup  ZKPVerification.hs
src/BN128/: Params.hs  ParseDatum.hs  Test.hs  ZKPVerification.hs
test/: Spec.hs
test/Spec/BLS6_6/: ZKPValidator.hs
test/Spec/BLS6_6_V1/: ZKPValidator.hs
utilities/: Utilities.cabal
utilities/src/Utilities/: Conversions.hs
